[project]
name = "bilqees_agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.119.1",
    "google-generativeai>=0.8.5",
    "numpy>=2.3.4",
    "openai>=2.6.0",
    "openai-agents>=0.4.0",
    "pinecone>=7.3.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = []
